# YOUVISA-sprint-3

./: .gitignore  README.md  RELATORIO_SPRINT3.md  test_sdk.py
docs/: ANALYTICS_RELATORIOS.md  ARQUITETURA.md  AVALIACAO_SIMULADA.md  CHECKLIST_ADERENCIA.md  CV_VALIDACAO_DOCUMENTOS.md  DADOS_E_ANALISE.md  DECISOES_TECNICAS.md  DEMO_SCRIPTS.md  FLUXOS_CHATBOT.md  FRONTEND_ADMIN.md  INTEGRACOES.md  NLP_CHATBOTS.md  PLANO_DESENVOLVIMENTO.md  RPA_AUTOMACAO.md  SEGURANCA_PRIVACIDADE.md  TECH_STACK.md  desafio.md
docs/diagrams/: README.md  architecture.mmd
docs/uml/: README.md  activity.puml  component.puml  use-case.puml
document/sprint_2/: implementation_plan.md  task.md  walkthrough.md
document/sprint_3/: implementation_plan_sprint3.md  state_workflow.md  task_sprint3.md  technical_report.md
scripts/: gen_diagrams.ps1  push.ps1
src/backend/: pyproject.toml  test_full_flow.py  test_notification.py  verify_sprint3.py
src/backend/app/: main.py
src/backend/app/routers/: chat.py  documents.py  notifications.py
src/backend/app/services/: ai_service.py  automation_service.py  cv_service.py  notification_service.py  workflow_service.py
src/backend/uploads/: 135e36b4-b6df-4efe-93fb-56aa3e259388_test_passport.txt  85c36b71-2dc8-4060-a742-5e07903efa18_test_passport.txt  b5a8258a-7dfe-49aa-88c7-88afd6b1be34_browser_demo.txt  c374e9fc-e413-471b-8f7e-7dba91e12c90_test_passport.txt
src/backend/youvisa_backend.egg-info/: PKG-INFO  requires.txt
src/frontend/: package-lock.json  package.json  vite.config.js
src/frontend/src/: App.css  App.jsx  index.css
(+5 files in other folders)
